--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,8 @@
 		
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
-	<script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
+	<!--<script src="lib/ngmap/build/scripts/ng-map.min.js"></script>-->
+	<script src="lib/ngmap/build/scripts/ng-map.js"></script>
   
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
