--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,8 @@
     <!-- ionic/angularjs js -->
 		
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-	<script src="http://maps.googleapis.com/maps/api/js"></script>
+	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMVhvoL-PnTpY2u10RlH2RUyvltMliZ3w" type="text/javascript"></script>
 	<!--<script src="lib/ngmap/build/scripts/ng-map.min.js"></script>-->
 	<script src="lib/ngmap/build/scripts/ng-map.js"></script>
   
