--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
 
     <!-- compiled css output -->
+	<link rel="stylesheet" href="css/jquery.raty.css"/>  
     <link href="css/ionic.app.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
@@ -15,9 +16,9 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMVhvoL-PnTpY2u10RlH2RUyvltMliZ3w" type="text/javascript"></script>
-	<!--<script src="lib/ngmap/build/scripts/ng-map.min.js"></script>-->
+	<script src="lib/jquery/dist/jquery.min.js"></script>
 	<script src="lib/ngmap/build/scripts/ng-map.js"></script>
-  
+  	<script src="lib/jquery.raty.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
