--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,8 @@
 	<meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-
-
+	  
     <!-- compiled css output -->
-	<link rel="stylesheet" href="css/jquery.raty.css"/>  
     <link href="css/ionic.app.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
@@ -16,9 +14,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMVhvoL-PnTpY2u10RlH2RUyvltMliZ3w" type="text/javascript"></script>
-	<script src="lib/jquery/dist/jquery.min.js"></script>
+	<!--<script src="lib/jquery/dist/jquery.min.js"></script>-->
 	<script src="lib/ngmap/build/scripts/ng-map.js"></script>
-  	<script src="lib/jquery.raty.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
