Appoinment form created

--- a/www/index.html
+++ b/www/index.html
@@ -12,10 +12,13 @@
     <!-- ionic/angularjs js -->
 		
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMVhvoL-PnTpY2u10RlH2RUyvltMliZ3w" type="text/javascript"></script>
-	<!--<script src="lib/jquery/dist/jquery.min.js"></script>-->
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMVhvoL-PnTpY2u10RlH2RUyvltMliZ3w" type="text/javascript"></script>
+	
+	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>
+	<script src="lib/jquery/dist/jquery.min.js"></script>-->
+	  
 	<script src="lib/ngmap/build/scripts/ng-map.js"></script>
+	  
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
