Appoinment form design

--- a/www/index.html
+++ b/www/index.html
@@ -7,18 +7,23 @@
     <title></title>
 	  
     <!-- compiled css output -->
-    <link href="css/ionic.app.css" rel="stylesheet">
+	<link rel="stylesheet" href="lib/jquery-timepicker-jt/jquery.timepicker.css"/>
+    <!--<link href="css/ionic.app.css" rel="stylesheet">-->
+	<link rel="stylesheet" href="css/ionic.app.css"/>
 
     <!-- ionic/angularjs js -->
 		
+	<script src="lib/jquery/dist/jquery.min.js"></script>  
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMVhvoL-PnTpY2u10RlH2RUyvltMliZ3w" type="text/javascript"></script>
 	
-	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>
-	<script src="lib/jquery/dist/jquery.min.js"></script>-->
+	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
 	  
 	<script src="lib/ngmap/build/scripts/ng-map.js"></script>
-	  
+	<script src="lib/pikaday/pikaday.js"></script>
+    <script src="lib/pikaday-angular/pikaday-angular.js"></script>
+	<script src="lib/jquery-timepicker-jt/jquery.timepicker.js"></script> 
+	<script src="lib/angular-jquery-timepicker/src/timepickerdirective.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
