Filter by city functionality

--- a/www/index.html
+++ b/www/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
+	<meta http-equiv="Content-Security-Policy" content="default-src *; script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 	  
     <!-- compiled css output -->
-	<link rel="stylesheet" href="lib/jquery-timepicker-jt/jquery.timepicker.css"/>
+	<link rel="stylesheet" href="lib/jquery-timepicker-jt/jquery.timepicker.css">
+	<link rel="stylesheet" href="css/jquery.datetimepicker.css"/>
     <!--<link href="css/ionic.app.css" rel="stylesheet">-->
-	<link rel="stylesheet" href="css/ionic.app.css"/>
+	<link rel="stylesheet" href="css/ionic.app.css">
 
     <!-- ionic/angularjs js -->
 		
@@ -20,7 +21,8 @@
 	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
 	  
 	<script src="lib/ngmap/build/scripts/ng-map.js"></script>
-	<script src="lib/pikaday/pikaday.js"></script>
+	<!--<script src="lib/pikaday/pikaday.js"></script>-->
+	<script src="js/jquery.datetimepicker.full.js"></script>
     <script src="lib/pikaday-angular/pikaday-angular.js"></script>
 	<script src="lib/jquery-timepicker-jt/jquery.timepicker.js"></script> 
 	<script src="lib/angular-jquery-timepicker/src/timepickerdirective.js"></script>
