Appointment form finished

--- a/www/index.html
+++ b/www/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<meta http-equiv="Content-Security-Policy" content="default-src *; script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
+	<meta http-equiv="Content-Security-Policy" content="script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
+	  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 	  
     <!-- compiled css output -->
-	<link rel="stylesheet" href="lib/jquery-timepicker-jt/jquery.timepicker.css">
 	<link rel="stylesheet" href="css/jquery.datetimepicker.css"/>
+	<link rel="stylesheet" href="lib/jquery-timepicker-jt/jquery.timepicker.css">
     <!--<link href="css/ionic.app.css" rel="stylesheet">-->
 	<link rel="stylesheet" href="css/ionic.app.css">
 
