Book an appointment

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Security-Policy" content="script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; *; style-src  &apos;self&apos; &apos;unsafe-inline&apos; *">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-	  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 	  
     <!-- compiled css output -->
 	<link rel="stylesheet" href="css/jquery.datetimepicker.css"/>
@@ -16,7 +16,8 @@
     <!-- ionic/angularjs js -->
 		
 	<script src="lib/jquery/dist/jquery.min.js"></script>  
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+	<!--<script src="lib/ionic/js/ionic.bundle.js"></script>-->
+	<script src="lib/ionic/js/ionic.bundle.min.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMVhvoL-PnTpY2u10RlH2RUyvltMliZ3w" type="text/javascript"></script>
 	
 	<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
