--- a/search.html
+++ b/search.html
@@ -39,7 +39,7 @@
 								<option value="2">Option2</option>
 							</select>
 						</div>
-						<div class="col-sm-2 col-md-2 no-padd">
+						<div class="col-sm-2 col-md-2 no-padd outline-none">
 							<button class="btn btn-orange btn-block no-radius-left">Search</button>
 						</div>
 					</div>
